fix: the color of select box options in dark mode

--- a/src/components/preferences.css
+++ b/src/components/preferences.css
@@ -145,6 +145,11 @@
     appearance: none;
 }
 
+.option-select > select > option {
+    color: var(--font-color);
+    background-color: var(--background-color);
+}
+
 ::-ms-expand {
     display: none;
 }
